[package]
name = "ghsec"
description = "GitHub Security Linter"
version = "0.5.0"
edition = "2021"
homepage = "https://vtavernier.github.io/ghsec/"
repository = "https://github.com/vtavernier/ghsec.git"
license = "MIT"

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
enum_dispatch = "0.3.12"
futures-util = "0.3.30"
glob = "0.3.1"
octocrab = { version = "0.32.0", features = ["stream"] }
regex = "1.10.2"
secure-string = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
url = "2.5.0"

[profile.release]
opt-level = 's'
strip = true
lto = "fat"
panic = "abort"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
